--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
             "email": "srdjan.marjan@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "5.6.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Order\\": "src"
+        }
+    }
 }
